2011-11-17  Ingo Feinerer  <feinerer@logic.at>

	* inst/stopwords/SMART.dat: Add SMART information retrieval system
	stopwords (which are also used by the MC toolkit).

	* R/matrix (termFreq): Allow local option \code{bounds$local} to
	restrict how often a term may appear in each document (generalizes
	\code{minDocFreq}). Similarly the local option \code{wordLenghts}
	for word length bounds (generalizes \code{minWordLength}).

	* R/matrix.R (TermDocumentMatrix.VCorpus): New global option
	\code{bounds$global} for restricting how often a term is allowed
	to appear in different documents.

	* R/matrix.R (TermDocumentMatrix.VCorpus): Distinguish between
	local options delegated internally to termFreq() and global
	options which are processed by the term-document matrix
	constructor itself.

2011-11-15  Ingo Feinerer  <feinerer@logic.at>

	* man/getTokenizers.Rd: Document getTokenizers().

	* man/tokenizer.Rd: Document MC_tokenizer() and scan_tokenizer().

2011-11-04  Ingo Feinerer  <feinerer@logic.at>

	* man/matrix.Rd: Document as.TermDocumentMatrix.term_frequency.

	* man/combine.Rd: Document c.term_frequency().

2011-10-11  Ingo Feinerer  <feinerer@logic.at>

	* R/meta.R (`meta<-.Corpus`): Assume that the replacement value
	can be accessed via '[' and not '[['.

2011-08-24  Ingo Feinerer  <feinerer@logic.at>

	* R/stopwords.R (stopwords): Raise an error if no stopwords are
	available for requested language. Suggested by Derek M Jones.

2011-05-27  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R (weightSMART): Implement Cosine and pivoted unique
	normalization.

2011-02-17  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (stemDocument.PlainTextDocument): Use language
	argument.

2011-02-04  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R: Store strings and connections instead of unevaluated
	calls.

2010-11-26  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (Corpus): Allow init and exit hooks for readers.

2010-10-22  Ingo Feinerer  <feinerer@logic.at>
