@@ -10,8 +10,7 @@ Depends: R (>= 2.11.0), methods
 Imports: slam (>= 0.1-22)
 Suggests: filehash, proxy, Rgraphviz, Rmpi, RWeka, snow, Snowball, XML
 SystemRequirements: Antiword (http://www.winfield.demon.nl/) for reading MS Word files,
-  pdfinfo and pdftotext from Poppler (http://poppler.freedesktop.org/)
-  for reading PDF
+  pdftotext from Poppler (http://poppler.freedesktop.org/) for reading PDF
 Description: A framework for text mining applications within R.
 License: GPL (>= 2)
 URL: http://tm.r-forge.r-project.org/
