@@ -6,10 +6,9 @@
   document extracting both its text and its meta data.
 }
 \usage{
-readPDF(PdfinfoOptions = "", PdftotextOptions = "", \dots)
+readPDF(PdftotextOptions = "", \dots)
 }
 \arguments{
-  \item{PdfinfoOptions}{Options passed over to \command{pdfinfo}.}
   \item{PdftotextOptions}{Options passed over to \command{pdftotext}.}
   \item{\dots}{Arguments for the generator function.}
 }
@@ -17,11 +16,11 @@ readPDF(PdfinfoOptions = "", PdftotextOptions = "", \dots)
   Formally this function is a function generator, i.e., it returns a
   function (which reads in a text document) with a well-defined
   signature, but can access passed over arguments (e.g., options to
-  \command{pdfinfo} or \command{pdftotext}) via lexical scoping.
+  \command{pdftotext}) via lexical scoping.
 
-  Note that this PDF reader needs both the tools \command{pdftotext} and
-  \command{pdfinfo} installed and accessible on your system, available
-  as command line utilities in the Poppler PDF rendering library (see
+  Note that this PDF reader needs the tool \command{pdftotext} installed
+  and accessible on your system, available as command line utilities in
+  the Poppler PDF rendering library (see
   \url{http://poppler.freedesktop.org/}).
 }
 \value{
@@ -38,7 +37,7 @@ readPDF(PdfinfoOptions = "", PdftotextOptions = "", \dots)
   \code{\link{getReaders}} to list available reader functions.
 }
 \examples{
-if(all(file.exists(Sys.which(c("pdfinfo", "pdftotext"))))) {
+if(file.exists(Sys.which("pdftotext"))) {
     f <- system.file("doc", "tm.pdf", package = "tm")
     pdf <- readPDF(PdftotextOptions = "-layout")(elem = list(uri = f),
                                                  language = "en",
@@ -47,3 +46,4 @@ if(all(file.exists(Sys.which(c("pdfinfo", "pdftotext"))))) {
 }
 }
 \author{Ingo Feinerer}
+\keyword{file}
